[package]
authors = ["SyauqiAli"]
name = "rustite"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = "2"
napi-derive = "2"
rusqlite = { version = "0.31", features = ["bundled"] }
serde_json = "1.0.140"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
