[package]
edition = "2021"
name = "rustite"
version = "1.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.12.2", default-features = false, features = ["napi4", "serde-json"] }
napi-derive = "2.12.2"
rusqlite = { version = "0.31", features = ["bundled"] }
serde_json = "1.0.140"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"
