[package]
edition = "2021"
name = "rustite"
version = "1.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.12.2", default-features = false }
napi-derive = { version = "2.12.2", default-features = false, features = ["compat-mode"] }
#once_cell = "1.21.3"
rusqlite = { version = "0.31", default-features = false, features = ["bundled"] }
#serde_json = "1.0.140"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"
opt-level = 3
codegen-units = 1
